ipc/ipdl/test/ipdl/error/ForgottenManager.ipdl
//error: |manages| declaration in protocol `ForgottenManager' does not match any |manager| declaration in protocol `ManageeForgot'

include protocol ManageeForgot;

// ManageeForgot should have this protocol as its manager.

[ChildProc=any]
protocol ForgottenManager {
    manages ManageeForgot;
child:
    async ManageeForgot();
};
